# rust_cribbage_core

./: .gitignore  Cargo.toml  Dockerfile  README.md  app.yaml  build.rs
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: client_structs.rs  game_handlers.rs  handlers.rs  main.rs
game/: Cargo.toml
game/src/: cards.rs  combinator.rs  counting.rs  cribbage_errors.rs  lib.rs  scoring.rs  select_cards.rs
src/: lib.rs  main.rs
src/cards/: mod.rs
src/game/: cards.rs  combinator.rs  counting.rs  mod.rs  scoring.rs  select_cards.rs
tests/: generated_common.rs  generated_tests.rs  generated_toml_tests.rs  test.toml
