[package]
name = "rust_cribbage_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.21"
strum_macros = "0.21"
arrayvec="0.7.1"
rand= "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json= "1.0.67"
toml= "0.5.8"
itertools= "0.10"
colored= "2"