[package]
name = "cribbage-api"
version = "0.1.0"
edition = "2018"

[dependencies]
arrayvec="0.7.1"
serde_json= "1.0.67"
actix-web = "3.3.2"
serde = { version = "1.0.123", features = ["derive"] }
azure_sdk_cosmos="0.100.3"
azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust", branch = "main" }
reqwest = "0.11.4"
rand = "0.8.4"
cribbage_library={path="../game"}
actix-cors="0.5.4"
actix-rt="2.2.0"
